manifests/pepr-module-pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    pepr.dev/description: >-
      Configures the distroless pgbouncer connection pooler for the Zalando postgres-operator
  labels:
    app: pepr-pgbouncer-watcher
    pepr.dev/controller: watcher
    pepr.dev/uuid: pgbouncer
  name: pepr-pgbouncer-watcher
  namespace: pepr-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pepr-pgbouncer-watcher
      pepr.dev/controller: watcher
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        buildTimestamp: '1780606572134'
      labels:
        app: pepr-pgbouncer-watcher
        pepr.dev/controller: watcher
    spec:
      containers:
        - args:
            - /app/node_modules/pepr/dist/controller.js
            - e0519630f08b84a64d74fb755b0034c2d22ba9cbbfe54c303fe5b2bd4c21bbef
          image: ghcr.io/defenseunicorns/pepr/private/controller:v1.2.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          name: watcher
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 256Mi
              cpu: 200m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/certs
              name: tls-certs
              readOnly: true
            - mountPath: /app/load
              name: module
              readOnly: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: pepr-pgbouncer
      terminationGracePeriodSeconds: 5
      volumes:
        - name: tls-certs
          secret:
            secretName: pepr-pgbouncer-tls
        - name: module
          secret:
            secretName: pepr-pgbouncer-module
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    pepr.dev/description: >-
      Configures the distroless pgbouncer connection pooler for the Zalando postgres-operator
  labels:
    app: pepr-pgbouncer
    pepr.dev/controller: admission
    pepr.dev/uuid: pgbouncer
  name: pepr-pgbouncer
  namespace: pepr-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pepr-pgbouncer
      pepr.dev/controller: admission
  template:
    metadata:
      annotations:
        buildTimestamp: '1780606572134'
      labels:
        app: pepr-pgbouncer
        pepr.dev/controller: admission
    spec:
      containers:
        - args:
            - /app/node_modules/pepr/dist/controller.js
            - e0519630f08b84a64d74fb755b0034c2d22ba9cbbfe54c303fe5b2bd4c21bbef
          image: ghcr.io/defenseunicorns/pepr/private/controller:v1.2.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          name: server
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 256Mi
              cpu: 200m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/certs
              name: tls-certs
              readOnly: true
            - mountPath: /app/api-path
              name: api-path
              readOnly: true
            - mountPath: /app/load
              name: module
              readOnly: true
      priorityClassName: system-node-critical
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: pepr-pgbouncer
      terminationGracePeriodSeconds: 5
      volumes:
        - name: tls-certs
          secret:
            secretName: pepr-pgbouncer-tls
        - name: api-path
          secret:
            secretName: pepr-pgbouncer-api-path
        - name: module
          secret:
            secretName: pepr-pgbouncer-module
---
apiVersion: v1
kind: Service
metadata:
  labels:
    pepr.dev/controller: admission
  name: pepr-pgbouncer
  namespace: pepr-system
spec:
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app: pepr-pgbouncer
    pepr.dev/controller: admission
---
apiVersion: v1
kind: Service
metadata:
  labels:
    pepr.dev/controller: watcher
  name: pepr-pgbouncer-watcher
  namespace: pepr-system
spec:
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app: pepr-pgbouncer-watcher
    pepr.dev/controller: watcher
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pepr-pgbouncer
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      caBundle: >-
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlDdERDQ0FaeWdBd0lCQWdJQkFUQU5CZ2txaGtpRzl3MEJBUXNGQURBY01Sb3dHQVlEVlFRREV4RlFaWEJ5DQpJRVZ3YUdWdFpYSmhiQ0JEUVRBZUZ3MHlOakEyTURReU1EVTJNVEphRncweU56QTJNRFF5TURVMk1USmFNQUF3DQpnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDamJ3akdmTWx1OHg5SHZjd293WERQDQptRWNLUFBObzNaejlXVlZKRVdpSEMwZVRLcGM0S2diS1Z2V2M2Tk1DbjQxZHR6NUE2b0RVTTJCMFBiV1N6THlKDQo5bm8zM0FUWVJ6VlpGbHE3OHNxeTNUeVhZbzhJSGwxZmNDdnArTGN6OERrWUF0K3Urcjhlbzd4NU9aa00zdkQwDQpFMXhTYVNCaGMr [...]
      service:
        name: pepr-pgbouncer
        namespace: pepr-system
        path: >-
          /mutate/8f4f98c091aa908e4b4fb08b764672ea8dc46c36bf2c97d2ad0ce989f270548b
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: pepr-pgbouncer.pepr.dev
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - pepr-system
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
    sideEffects: None
    timeoutSeconds: 10
